# pi_agents

./: .dockerignore  .env.example  .gitignore  AGENTS.md  PLAN.md  README.md  README_USAGE.md  TECHNICAL_DETAILS.md  docker-compose.kvm.yml  docker-compose.yml  sample_run_terminal.txt
backend/: Dockerfile  README.md  VmManager.Dockerfile  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 20260717_01_initial_persistence.py  20260717_02_durable_run_events.py  20260717_03_artifact_versions.py  20260717_04_runner_leases.py  20260717_05_durable_run_commands.py  20260717_06_agent_attempts.py  20260717_07_durable_workspaces.py  20260717_08_runtime_workspace_controls.py  20260717_09_approval_requests.py  20260717_10_desktop_session_idempotency.py  20260717_11_promotion_confirmations.py  20260717_12_egress_audit.py  20260717_13_approval_expiry.py  20260717_14_execution_checkpoints.py
backend/src/orchestrator/: __init__.py  api.py  approvals.py  artifact_api.py  asgi.py  attempts.py  browser_runtime.py  checkpoints.py  commands.py  conversations.py  delivery.py  desktop.py  desktop_api.py  desktop_gateway_main.py  dispatch.py  egress.py  egress_proxy_main.py  guest_git.py  guest_model_gateway.py  guest_runtime.py  inference_proxy_main.py  invocation.py  lm_studio_relay_main.py  migrations.py  model_gateway.py  outcome.py  pi_rpc.py  projects.py  promotion.py  promotion_manager.py  promotion_manager_asgi.py  promotion_preview.py  promotion_service.py  run_queries.py  runner_main.py  settings.py  sse.py  stages.py  telemetry.py  triage.py  (+5 more)
(+198 files in other folders)
