[build-system]
requires = ["setuptools>=77,<84"]
build-backend = "setuptools.build_meta"

[project]
name = "deterministic-agent-orchestrator"
version = "0.1.0"
description = "Deterministic agent orchestrator backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14,<2",
  "fastapi>=0.115,<1",
  "langgraph>=0.2,<1",
  "langgraph-checkpoint-postgres>=2,<4",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "psycopg[binary]>=3.2,<4",
  "sqlalchemy>=2.0,<3",
]

[dependency-groups]
dev = [
  "httpx>=0.28,<1",
  "mypy>=1.14,<2",
  "pytest>=8.3,<10",
  "ruff>=0.8,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
orchestrator = ["py.typed"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers -ra"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["B", "E4", "E7", "E9", "F", "I", "RUF", "SIM", "UP"]
